Added categories and some demo data

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -36,6 +36,7 @@
           <ul>
             <li><a href="SpectreService.svc/Products">/Products</a></li>        
             <li><a href="SpectreService.svc/Suppliers">/Suppliers</a></li>        
+            <li><a href="SpectreService.svc/Categories">/Categories</a></li>        
           </ul>
         </li>
         <li>Sample Entities
@@ -44,6 +45,7 @@
             <li><a href="SpectreService.svc/Products(3)">/Products(3)</a></li>        
             <li><a href="SpectreService.svc/Products(3)/Supplier">/Products(3)/Supplier</a></li>        
             <li><a href="SpectreService.svc/Suppliers(1)">/Suppliers(1)</a></li>        
+            <li><a href="SpectreService.svc/Categories(1)">/Categories(1)</a></li>        
           </ul>
         </li>
       </ul>
